:memo: Added secured API endpoints
